[package]
name = "ros_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"

r2r = "0.8.2"
safe_drive = { version = "0.3.6", features = ["humble"] }
safe_drive_msg = "0.2.3"

tracing-log = "0.2.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
tokio = { version = "1.35.1", features = ["full"] }
futures-util = "0.3.30"
iceoryx-rs = "*"
# iceoryx2 = "0.2.2"
iceoryx2 = { git = "https://github.com/eclipse-iceoryx/iceoryx2" }
clap = { version = "4.4.18", features = ["derive"] }

# mininav_idl = { path = "/home/passchaos/robotics/controller/mininav-idl/ros2_interfaces" }
